--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,32 +1,46 @@
 {
-    // See https://go.microsoft.com/fwlink/?LinkId=733558
-    // for the documentation about the tasks.json format
-    "version": "2.0.0",
+    "options": {
+        "cwd": "${workspaceFolder}/build"
+    },
     "tasks": [
         {
-            "label": "init",
-            "type": "shell",
-            "command": "sudo -E env PATH=$PATH bash ${workspaceFolder}/build.sh init"
+            "label": "cmake",
+            "command": "cmake",
+            "args": [
+                "-DDEBUG=ON",
+                ".."
+            ]
         },
         {
-            "label": "build_debug",
-            "type": "shell",
-            "command": "bash build.sh debug",
-            "problemMatcher": [],
-            "group": {
-                "kind": "build",
-                "isDefault": true
-            }
+            "label": "make",
+            "command": "make",
+            "args": [
+                "-j",
+                "4"
+            ]
         },
         {
-            "label": "build_release",
-            "type": "shell",
-            "command": "bash build.sh release"
+            "label": "CMake Build",
+            "dependsOn": [
+                "cmake",
+                "make"
+            ]
         },
         {
-            "label": "gen_parser",
+            "label": "Get pid of observer",
             "type": "shell",
-            "command": "cd ${workspaceFolder}/src/observer/sql/parser && bash gen_parser.sh"
+            "command":"ps aux | grep observer"
+        },
+        {
+            "label": "Run observer",
+            "type": "shell",
+            "command":"${workspaceFolder}/build/bin/observer -s ${workspaceFolder}/miniob-test.sock -f ${workspaceFolder}/etc/observer.ini"
+        },
+        {
+            "label": "Run obclient",
+            "type": "shell",
+            "command":"${workspaceFolder}/build/bin/obclient -s ${workspaceFolder}/miniob-test.sock"
         }
-    ]
+    ],
+    "version": "2.0.0"
 }
